--- a/pomodoro-app/public/index.html
+++ b/pomodoro-app/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
+    content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;**script-src 'self' http://onlineerp.solution.quebec 'unsafe-inline' 'unsafe-eval';** ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <title>Pomodoro App</title>
